# OmicsDS

./: CMakeLists.txt
.github/workflows/: basic.yml
bindings/r/: build.sh
bindings/r/R/: RcppExports.R  omicsds-package.R
bindings/r/src/: RcppExports.cpp  omicsds_query.cpp
bindings/r/tests/testthat/: test.R
src/: CMakeLists.txt
src/main/: CMakeLists.txt
src/main/cpp/api/: omicsds.cc  omicsds.h
src/main/cpp/loader/: omicsdb_loader.cc  omicsds_export.h  omicsds_loader.cc  omicsds_loader.h  omicsds_schema.h
src/main/cpp/src/: CMakeLists.txt
src/main/cpp/utils/: omicsds_encoder.cc
src/test/: CMakeLists.txt
src/test/cpp/: CMakeLists.txt  test_api.cc  test_file_utility.cc  test_matrix_loader.cc  test_omics_field_data.cc  test_omicsds_loader.cc
tools/: CMakeLists.txt  import.cc
